# drone

./: .gitignore  Accelerometer.cpp  FlightMotor.h  Gyro.cpp  Main.cpp  README.md  Runnable.h  Vector3.cpp  Vector3.h
CAD/Model/: PCBV2 Case - Drone Body.step  V2 parts - PCB.step
CAD/Model/Propellors/: 50mm Toroidal Propellor.step  60mm Toroidal - Propellor.step  Propellor - Part 1.step  prop test.step  toroidal.step
CAD/Model/V0/: Base.step  motor base test 2.step
CAD/Model/V1/: V1.0.step
CAD/Model/V2/: V2.0.step
CAD/Model/V3/: 70mm Toroidal Propellor CCW.step  70mm Toroidal Propellor CW.step  Toroidal V2 - Propellor.step  V3 (Mini) - Drone.step  (+2 more)
Code/: CMakeLists.txt
Code/C/: CMakeLists.txt  Main.cpp  Main.h  pico_sdk_import.cmake
Code/C/Control/: Controller.cpp  Controller.h  Drone.h  FlightMotor.cpp  FlightMotor.h  FlightSystem.cpp  FlightSystem.h  Router.h
Code/C/Math/: Vector3.cpp  Vector3.h
Code/C/Output/: FlightMotor.h
Code/C/Sensors/: IMU.cpp  IMU.h  Sensor.h
Code/Control/: Drone.h  FlightSystem.h  Router.cpp
Code/Math/: Vector3.cpp  Vector3.h
Code/Rust/Drone/: Cargo.toml
Code/Rust/Drone/src/: main.rs
Code/Rust/drone/: Cargo.toml
Code/Rust/drone/src/: main.rs
Code/Rust/drone/src/control/: motor.rs
Code/Rust/drone/src/hardware/: hardware_handler.rs
Code/Rust/drone/src/io/: lcd.rs  mod.rs
Code/Rust/drone/src/sensors/: mod.rs
Code/Sensors/: Accelerometer.cpp  Accelerometer.h  Gyro.h  IMU.cpp  IMU.h
Code/drone/: Cargo.toml
Code/drone/src/: main.rs  tests.rs
Code/drone/src/control/: flightSystem.rs  flight_system.rs  mod.rs  motor.rs
Code/drone/src/hardware/: hardware_handler.rs
Code/drone/src/io/: lcd.rs  mod.rs  radio.rs  router.rs
Code/drone/src/math/: functions.rs  mod.rs  vector3.rs
Code/drone/src/sensors/: distance.rs  imu.rs
Code/host/: Cargo.toml
Code/host/src/: main.rs
code/: Cargo.toml  Embed.toml
code/src/: main.rs
pcb/: Drone_PCB.kicad_prl  Drone_PCB.kicad_pro  Drone_PCB_v1.kicad_prl  fp-info-cache
pcb/V0/: Drone_PCB_v1.kicad_pcb
pcb/V1/: Drone_PCB.kicad_pcb
pcb/V2/: Drone_PCB.csv
(+103 files in other folders)
