[package]
name = "drone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt= "0.2.0"
embedded-hal = "0.2.5"
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.8.2"
fugit = "0.3.6"
nb = "1.0"
paste = "1.0"
heapless = "0.7.16"
arrform = "0.1.1"
